fix: Increase colour contrast on Return Home button for WAVE accessibility validation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ footer {
 
 #return-home-contact {
     border: #6FCF97!important;
-    background-color: rgb(253, 47, 47);
+    background-color: rgb(160, 9, 9);
     padding: 2px;
     color: #fff;
     border-radius: 4px;
